# LLM

./: README.md
legal-agent/: Dockerfile  README.md  check_overlap.py  docker-compose.yaml  entrypoint.sh  pyproject.toml  run_and_final_score.sh
legal-agent/agent/: agent.py  faiss_search.py
legal-agent/data/: final_linked_clauses_openai.jsonl  id_mapping_openai.json  output.jsonl  test.jsonl
legal-agent/data/raw data/: 범죄피해자 보호법(법률)(제20433호)(20250321).docx  전자장치 부착 등에 관한 법률(법률)(제20007호)(20240717).docx  형법(법률)(제20908호)(20250408) (1).docx  형사소송법(법률)(제20460호)(20250117).docx
legal-agent/scripts/: csv_to_json.py  data_preprocessing_to_faiss.py  run_agent.py  score.py
